package br.edu.ifpb.cstsi.pss.scireview.model.estado;

public class Aceito extends EstadoArtigoBase {

    public Aceito() {
        super(StatusArtigo.ACEITO);
    }
}
