package br.edu.ifpb.cstsi.pss.scireview.model.estado;

public class Rejeitado extends EstadoArtigoBase {

    public Rejeitado() {
        super(StatusArtigo.REJEITADO);
    }
}
