package br.edu.ifpb.cstsi.pss.scireview.model.estado;

public enum StatusArtigo {
    SUBMETIDO,
    EM_REVISAO,
    REVISADO,
    ACEITO,
    REJEITADO
}
